# calommata

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  NOTE.md  README.md  debug_ast.py  docker-compose.yml  pyproject.toml  pytest.ini  ruff.toml  test_complex_e2e.py  test_e2e.py  test_new_structure.py  test_single_query.py  test_tsquery.py
app/: main.py
app/ast/: __init__.py  base_models.py  base_parser.py  constants.py  graph_builder.py  models.py  node_extractor.py  parser.py  parser_factory.py
app/ast/base/: base_models.py  base_parser.py
app/ast/graph/: graph.py  graph_builder.py
app/ast/languages/: __init__.py  javascript_models.py  python_models.py  typescript_models.py
dev-docs/: Flow.md  TODO.md  Think.md  Why.md
dev-docs/db/: Neo4j.md  Qdrant.md
docs/: DEV.md  cli.md  core.md  graph.md  parser.md
src/: __init__.py
src/core/: __init__.py  agent.py  answer_generation_node.py  code_retrieval_node.py  code_retriever.py  config.py  constants.py  context_building_node.py  context_optimizer.py  embedder.py  factory.py  graph_embedder.py  graph_service.py  graph_statistics.py  project_analyzer.py  prompts.py  query_understanding_node.py  retriever.py  state.py
src/core/config/: __init__.py  embedding.py  llm.py  neo4j.py  retriever.py
src/core/constants/: embedding.py  neo4j.py  search.py
src/core/embedding/: __init__.py  code_embedder.py  graph_embedder.py
src/core/graph/: __init__.py  graph_service.py  graph_statistics.py
src/core/prompt/: search_prompt.py
src/core/utils/: __init__.py  project_analyzer.py
src/core/workflow/: __init__.py
src/graph/: __init__.py  adapter.py  connection_manager.py  dependency_relation_builder.py  dict_relation_builder.py  exceptions.py  models.py  node_converter.py  node_persistence.py  persistence.py  queries.py  relationship_builder.py  relationship_persistence.py  statistics_manager.py  statistics_updater.py  structural_relation_builder.py  utils.py  vector_search_manager.py
src/graph/db/: __init__.py  connection_manager.py  models.py  persistence.py
src/graph/node/: node_converter.py  (+1 more)
src/parser/: __init__.py  ast_extractor.py  base_parser.py  block_factory.py  code_analyzer.py  code_ast_analyzer.py  code_block.py  dependency_extractor.py  file_reader.py
tests/ast/: conftest.py  test_cross_file_resolution.py  test_graph_builder.py  test_graph_traversal.py  test_models.py  test_node_extractor.py  test_parser.py
(+55 files in other folders)
