[project]
name = "code-analyzer-core"
version = "0.2.0"
description = "LLM-powered code analysis and GraphRAG service"
requires-python = ">=3.13"
dependencies = [
    "neo4j>=6.0.2",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=0.2.0",
    "langchain-google-genai>=2.0.0",
    "langchain-huggingface>=0.1.0",
    "sentence-transformers>=3.0.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "python-dotenv>=1.0.0",
    "langchain-community>=0.4.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]
